--- a/src/style.css
+++ b/src/style.css
@@ -99,3 +99,35 @@ header > h1::before {
     background-color: rgb(100, 100, 250);
     color: white;
 }
+
+dialog {
+    width: 500px;
+    position: relative;
+    margin: auto;
+    padding: 20px 30px;
+    border: 1px solid rgb(255, 0, 0);
+    background-color: rgb(255, 218, 236);
+}
+
+::backdrop {
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+label {
+    font-size: 0.8rem;
+}
+
+input {
+    display: block;
+    width: 100%;
+    font-size: 0.8rem;
+    padding-left: 3px;
+    height: 20px;
+    background-color: white;
+    border: 1px solid rgb(39, 107, 255);
+    margin-bottom: 20px;
+}
+
+input:focus{
+    outline: none;
+}
