--- a/src/style.css
+++ b/src/style.css
@@ -151,3 +151,72 @@ select:focus {
     content: "+ ";
     font-size: 1.2rem;
 }
+
+#todo-display {
+    width: 100%;
+}
+
+.todo-div {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 10px;
+    width: 90%;
+    margin: auto;
+    border-bottom: 1px gray solid;
+    border-left: 1px solid rgba(0, 0, 0, 0);
+    border-right: 1px solid rgba(0, 0, 0, 0);
+    user-select: none;
+    cursor: pointer;
+    position: relative;
+}
+
+.todo-div:hover {
+    border-left: 1px solid rgb(193, 222, 255);
+    border-right: 1px solid rgb(193, 222, 255);
+    border-bottom: 1px solid rgb(193, 222, 255);
+    opacity: 1;
+}
+
+.todo-div::before {
+    content: "";
+    position: absolute;
+    background: linear-gradient(to bottom, white, rgb(193, 222, 255));
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    margin: -10px;
+    opacity: 0;
+}
+
+.todo-div:hover::before {
+    opacity: 1;
+    transition: 150ms;
+}
+
+.mark-as-done-btn {
+    width: 30px;
+    height: 30px;
+    border-radius: 100px;
+    background-color: rgba(0, 0, 0, 0);
+    color: rgba(0, 0, 0, 0);
+    border: 1px solid red;
+    font-size: 1.2em;
+}
+
+.todo-done .mark-as-done-btn {
+    color: white;
+    background-color: red;
+    font-weight: bolder;
+}
+
+.todo-div-text-side p {
+    font-size: 0.9em;
+}
+
+.todo-div-text-side p:last-child {
+    font-size: 0.8em;
+    font-style: italic;
+    color: rgb(41, 41, 41);
+    margin-top: 5px;
+}
