--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -31,7 +31,7 @@ header > h1 {
 }
 
 header > h1::before {
-    background-image: url(./assets/img/pngwing.com.png);
+    background-image: url(../img/pngwing.com.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
