--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -12,231 +12,19 @@ body {
     flex-direction: column;
 }
 
+#main-wrapper {
+    max-width: 1000px;
+    margin: auto
+}
+
 header {
-    display: flex;
-    align-items: center;
-    font-size: 0.46em;
-    background: linear-gradient(rgb(255, 152, 175), rgb(250, 84, 84) 60%);
-    border-bottom: 2px solid rgb(112, 112, 112);
-    padding-left: 3em;
-    color: white;
+    background-color: rgb(73, 73, 73);
+    padding-left: 10px;
 }
 
 header > h1 {
-    font-weight: 100;
-    line-height: 1.5em;
-    display: flex;
-    gap: 5px;
-    align-items: center;
-}
-
-header > h1::before {
-    background-image: url(../img/pngwing.com.png);
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: block;
-    width: 20px;
-    height: 20px;
-    content:"";
-}
-
-#main-wrapper {
-    display: flex;
-    flex: 1;
-}
-
-#sidebar {
-    background:
-      linear-gradient(
-        to bottom,
-        rgb(49, 49, 49),
-        rgb(43, 42, 42));
-    min-width: 350px;
-    height: 100%;
-    border-width: 5px;
-    border-style: solid;
-    border-left: 0;
-    border-bottom: 0;
-    border-top: 0;
-    border-image: 
-      linear-gradient(
-        to bottom, 
-        rgb(151, 151, 151), 
-        rgba(0, 0, 0, 0)
-      ) 1 100%;
-    
-    padding: 10px;
-}
-
-#lists-list-container {
-    background-color: white;
-    border-radius: 8px 8px 0 0;
-    color: black;
-}
-
-#lists-list-container > h2{
-    background: linear-gradient(to right, rgb(255, 2, 107), rgb(255, 71, 148));
-    color: white;
-    font-weight: 600;
-    font-size: 0.8em;
-    padding: 5px 10px;
-    display: flex;
-    justify-content: space-between;
-    border-radius: 8px 8px 0 0;
-}
-
-#lists-list {
-    padding: 2px 2px;
-}
-
-.list-branch {
-    list-style: none;
-    padding: 5px 10px;
-    font-size: 0.8em;
-    cursor: pointer;
-}
-
-.list-branch:hover {
-    background-color: rgb(100, 100, 250);
-    color: white;
-}
-
-dialog {
-    width: 500px;
-    position: relative;
-    margin: auto;
-    padding: 20px 30px;
-    border: 1px solid rgb(255, 0, 0);
-    background-color: rgb(255, 218, 236);
-}
-
-::backdrop {
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
-label {
-    font-size: 0.8rem;
-}
-
-input,
-select {
-    display: block;
-    width: 100%;
-    font-size: 0.8rem;
-    padding-left: 3px;
-    height: 20px;
-    background-color: white;
-    border: 1px solid rgb(39, 107, 255);
-    margin-bottom: 20px;
-}
-
-input:focus,
-select:focus {
-    outline: none;
-}
-
-#add-list {
-    all: unset;
-    box-sizing: border-box;
-    width: 100%;
-    background: linear-gradient(to bottom, rgb(49, 253, 117), rgb(9, 233, 9));
-    color: rgb(3, 88, 32);
-    padding: 4px 7px;
-    font-size: 0.8rem;
-    font-weight: 800;
-    text-align: right;
-    cursor: pointer;
-}
-
-#add-list::before {
-    content: "+ ";
-    font-size: 1.2rem;
-}
-
-#todo-display {
-    width: 100%;
-}
-
-.todo-div {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    column-gap: 20px;
-    padding: 10px;
-    width: 90%;
-    margin: auto;
-    border-bottom: 1px gray solid;
-    border-left: 1px solid rgba(0, 0, 0, 0);
-    border-right: 1px solid rgba(0, 0, 0, 0);
-    user-select: none;
-    cursor: pointer;
-    position: relative;
-}
-
-.todo-div:hover {
-    border-left: 1px solid rgb(193, 222, 255);
-    border-right: 1px solid rgb(193, 222, 255);
-    border-bottom: 1px solid rgb(193, 222, 255);
-    opacity: 1;
-}
-
-.todo-div::before {
-    content: "";
-    position: absolute;
-    background: linear-gradient(to bottom, white, rgb(193, 222, 255));
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    margin: -10px;
-    opacity: 0;
-}
-
-.todo-div:hover::before {
-    opacity: 1;
-    transition: 150ms;
-}
-
-.mark-as-done-btn {
-    width: 30px;
-    height: 30px;
-    border-radius: 100px;
-    background-color: rgba(0, 0, 0, 0);
-    color: rgba(0, 0, 0, 0);
-    border: 1px solid red;
-    font-size: 1.2em;
-}
-
-.todo-done .mark-as-done-btn {
-    color: white;
-    background-color: red;
-    font-weight: bolder;
-}
-
-.todo-div-text-side p {
+    color: rgb(190, 190, 190);
     font-size: 0.9em;
+    font-weight: 100;
+    letter-spacing: 0.5ch;
 }
-
-.todo-div-text-side p:last-child {
-    font-size: 0.8em;
-    font-style: italic;
-    color: rgb(41, 41, 41);
-    margin-top: 5px;
-}
-
-.expanded-todo-div {
-    max-height: 0;
-    overflow: hidden;
-    flex: 0 0 100%;
-    margin-top: 0;
-    transition: max-height 0.1s ease-out;
-    transition: margin-top 0.1s ease-out;
-}
-
-.expanded-todo-div.show {
-    display: block;
-    margin-top: 10px;
-    max-height: 500px;
-    transition: max-height 0.5s ease-in;
-}
-
