--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -14,7 +14,9 @@ body {
 
 #main-wrapper {
     max-width: 1000px;
-    margin: auto
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
 }
 
 header {
