--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -30,3 +30,9 @@ header > h1 {
     font-weight: 100;
     letter-spacing: 0.5ch;
 }
+
+#inner-wrapper {
+    display: grid;
+
+    grid-template-columns: 1fr 2fr;
+}
