--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -4,16 +4,18 @@
     margin: 0;
     box-sizing: border-box;
     user-select: none;
+    color: rgb(250, 212, 255);
 }
 
 body {
     height: 100vh;
     display: flex;
     flex-direction: column;
+    background-color: rgb(31, 27, 41);
 }
 
 #main-wrapper {
-    max-width: 1000px;
+    width: 1000px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 100px;
@@ -35,6 +37,43 @@ header > h1 {
     display: grid;
 
     grid-template-columns: 1fr 2fr;
+    gap: 10px;
+}
+
+#add-btn-container {
+    padding: 10px;
+    display: flex;
+}
+
+#add-list {
+    flex-grow: 1;
+    color: rgb(250, 212, 255);
+    display: block;
+    background: rgba(0, 0, 0, 0);
+    border: 1px solid rgba(250, 212, 255, 0.5);
+    border-left: none;
+    border-right: none;
+    font-size: 1em;
+    font-weight: bold;
+    padding: 10px;
+}
+
+#lists-list > ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+}
+
+#lists-list > ul > li {
+    display: flex;
+    align-items: center;
+    height: 30px;
+    padding-left: 10px;
+}
+
+#lists-list > ul > li:hover {
+    background-color: rgb(250, 212, 255);
+    color: black;
 }
 
 .expanded-todo-div {
