--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -40,6 +40,10 @@ header > h1 {
     gap: 10px;
 }
 
+#sidebar {
+    margin-right: 20px;
+}
+
 #add-btn-container {
     padding: 10px;
     display: flex;
@@ -58,6 +62,12 @@ header > h1 {
     padding: 10px;
 }
 
+#lists-list-container {
+    border-right: 1px solid rgba(250, 212, 255, 0.7);
+    height: 100%;
+    padding-right: 20px;
+}
+
 #lists-list > ul {
     list-style: none;
     display: flex;
@@ -69,6 +79,7 @@ header > h1 {
     align-items: center;
     height: 30px;
     padding-left: 10px;
+    margin: 0 10px;
 }
 
 #lists-list > ul > li:hover, #add-list:hover {
