--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -96,3 +96,11 @@ header > h1 {
     display: block;
     max-height: 500px;
 }
+
+.list-title {
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 0.1ch;
+    font-size: 1.5rem;
+    margin-bottom: 15px;
+}
