--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,3 +1,7 @@
+:root {
+    --mainColor: rgb(250, 212, 255);
+}
+
 * {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 0;
@@ -85,6 +89,7 @@ header > h1 {
 .expanded-todo-div {
     max-height: 0;
     overflow: hidden;
+    flex-grow: 1;
 }
 
 .expanded-todo-div.show {
@@ -101,8 +106,11 @@ header > h1 {
 }
 
 .todo-div {
+    margin-bottom: 20px;
+}
+
+.todo-div-header {
     display: flex;
-    flex-wrap: wrap;
     gap: 0.8em;
 }
 
@@ -118,10 +126,27 @@ header > h1 {
 }
 
 .todo-div.todo-done > .todo-div-button-side > .mark-as-done-btn {
-    background: rgb(250, 212, 255);
+    background: var(--mainColor);
     color: rgb(31, 27, 41);
 }
 
 .todo-div-text-side {
+    flex-shrink: 0;
     flex-grow: 1;
+}
+
+.todo-div-text-side > p {
+    font-size: 0.8em;
+}
+
+.add-todo-btn {
+    background-color: rgba(0, 0, 0, 0);
+    border: 1px solid var(--mainColor);
+    border-radius: 8px;
+    padding: 5px;
+}
+
+.add-todo-btn:hover {
+    background-color: var(--mainColor);
+    color: rgb(31, 27, 41);
 }
